Updated Animated button

--- a/project/public/index.html
+++ b/project/public/index.html
@@ -24,6 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700&family=Markazi+Text:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
     <title>Little Lemon</title>
   </head>
   <body>
